--- a/data/language/base-language.txt
+++ b/data/language/base-language.txt
@@ -8,33 +8,41 @@ object_SatisfyAllNeeds                          Satisfy ALL Needs
 object_CallAllGuardsHere                        Call All Guards Here
 object_SpawnFire                                Spawn Fire on Location
 object_AssignBodyguard                          Temporary Bodyguard
+object_RemoveAllFires                           Removes all fires
+object_StopEscapingPrisoners                    Stops Escapees
+object_SpawnInmate                              Spawn 1 Inmate
+object_Spawn2Inmates                            Spawn 2 Inmates
+object_Spawn3Inmates                            Spawn 3 Inmates
+object_InfectPatientZero                        Infects a Prisoner
+object_CureAllPrisoners                         Cures all Prisoners
+object_MakeAllAngry                             Spreads Anger
 
 objective_grant_money1		                	TCM Money Grant 1
-objective_grant_money1_description				Receive 100,000 cash.
+objective_grant_money1_description				Receive $100,000 cash.
 
 objective_grant_money2		                	TCM Money Grant 2
-objective_grant_money2_description				Receive 250,000 cash.
+objective_grant_money2_description				Receive $250,000 cash.
 
 objective_grant_money3							TCM Money Grant 3
-objective_grant_money3_description				Receive 500,000 cash.
+objective_grant_money3_description				Receive $500,000 cash.
 
 objective_grant_money4							TCM Money Grant 4
-objective_grant_money4_description				Receive 1,000,000 cash.
+objective_grant_money4_description				Receive $1,000,000 cash.
 
 objective_grant_money5							TCM Money Grant 5
-objective_grant_money5_description				Receive 5,000,000 cash.
+objective_grant_money5_description				Receive $5,000,000 cash.
 
 objective_grant_money6							TCM Money Grant 6
-objective_grant_money6_description				Receive 8,500,000 cash.
+objective_grant_money6_description				Receive $8,500,000 cash.
 
-objective_grant_money7							TCM Money Grant 6
-objective_grant_money7_description				Receive 10,000,000 cash.
+objective_grant_money7							TCM Money Grant 7
+objective_grant_money7_description				Receive $10,000,000 cash.
 
-objective_grant_money8							TCM Money Grant 6
-objective_grant_money8_description				Receive 50,000,000 cash.
+objective_grant_money8							TCM Money Grant 8
+objective_grant_money8_description				Receive $50,000,000 cash.
 
-objective_grant_money9							TCM Money Grant 6
-objective_grant_money9_description				Receive 85,000,000 cash.
+objective_grant_money9							TCM Money Grant 9
+objective_grant_money9_description				Receive $85,000,000 cash.
 
-objective_grant_money10							TCM Money Grant 6
-objective_grant_money10_description				Receive 1,000,000,000 cash.
+objective_grant_money10							TCM Money Grant 10
+objective_grant_money10_description             Receive $1,000,000,000 cash.
