--- a/data/language/base-language.txt
+++ b/data/language/base-language.txt
@@ -16,6 +16,8 @@ object_Spawn3Inmates                            Spawn 3 Inmates
 object_InfectPatientZero                        Infects a Prisoner
 object_CureAllPrisoners                         Cures all Prisoners
 object_MakeAllAngry                             Spreads Anger
+object_RestAllGuards                            Rests Up All Guards
+object_OpenAllDoors                             Open All Doors
 
 objective_grant_money1		                	TCM Money Grant 1
 objective_grant_money1_description				Receive $100,000 cash.
