--- a/data/language/base-language.txt
+++ b/data/language/base-language.txt
@@ -19,6 +19,7 @@ object_MakeAllAngry                             Spreads Anger
 object_RestAllGuards                            Rests Up All Guards
 object_OpenAllDoors                             Open All Doors
 object_Luther                                   Luther
+object_PlaceRandomContraband                    Place Equipment
 
 objective_grant_money1		                	TCM Money Grant 1
 objective_grant_money1_description				Receive $100,000 cash.
