Added CTM remover. Fixed Luther related bugs.

--- a/data/language/base-language.txt
+++ b/data/language/base-language.txt
@@ -20,6 +20,7 @@ object_RestAllGuards                            Rests Up All Guards
 object_OpenAllDoors                             Open All Doors
 object_Luther                                   Luther
 object_PlaceRandomContraband                    Place Equipment
+object_RemoveCTMEntities                        Removes all CTM Entities
 
 objective_grant_money1		                	TCM Money Grant 1
 objective_grant_money1_description				Receive $100,000 cash.
