--- a/data/language/base-language.txt
+++ b/data/language/base-language.txt
@@ -21,6 +21,7 @@ object_OpenAllDoors                             Open All Doors
 object_Luther                                   Luther
 object_PlaceRandomContraband                    Place Equipment
 object_RemoveCTMEntities                        Removes all CTM Entities
+object_StartRiot                                Start a Riot
 
 objective_grant_money1		                	TCM Money Grant 1
 objective_grant_money1_description				Receive $100,000 cash.
